--- a/index.html
+++ b/index.html
@@ -218,8 +218,8 @@
                 <a href="#" class="link-arrow">Learn More</a>
             </div>
             <picture>
-                <!-- <source type="image/webp"
-                srcset="/images/wordpress.webp 1x, /images/wordpress@2x.webp 2x"> -->
+                <source type="image/webp"
+                srcset="/images/wordpress.webp 1x, /images/wordpress@2x.webp 2x">
                 <source type="image/jpg"
                 srcset="/images/wordpress.jpg 1x, /images/wordpress@2x.jpg 2x">
                 <img class="feature__image" src="/images/wordpress.jpg" alt="">
